--- a/public/css/home.css
+++ b/public/css/home.css
@@ -223,7 +223,7 @@ body {
     position: fixed;
     bottom: 0;
     z-index: 499;
-    height: 7%;
+    height: 5%;
     left: 65%;
     transform: translateX(-50%);
 }
@@ -285,7 +285,7 @@ body {
     position: fixed;
     bottom: 0;
     z-index: 500;
-    height: 7%;
+    height: 5%;
 }
 .setting-bar {
     width: 30%;
@@ -299,7 +299,7 @@ body {
     bottom: 0;
     z-index: 400;
     right: -.5%;
-    height: 7%;
+    height: 5%;
 }
 .cog-bar {
     width: 5%;
@@ -412,7 +412,12 @@ body {
         float: right;
     }
 }
-
+.app-button span {
+    margin-top: auto;
+    display: block;
+    height: 1.5em;
+    font-weight: 5;
+}
 .set-button {
     width: 50px;
     height: 50px;
