--- a/public/css/home.css
+++ b/public/css/home.css
@@ -509,7 +509,9 @@ body {
 .setting-button:hover {
     background: #1d1c1c;
 }
-
+.containerrr {
+    z-index: 99999999;
+}
 #fullscreenBtn {
     position: fixed;
     top: 0;
