Your commit message

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -510,7 +510,7 @@ body {
     background: #1d1c1c;
 }
 .containerrr {
-    z-index: 99999999;
+    z-index: 999999;
 }
 #fullscreenBtn {
     position: fixed;
