--- a/public/css/home.css
+++ b/public/css/home.css
@@ -407,7 +407,6 @@ body {
     text-overflow: ellipsis;
     overflow: hidden;
 }
-
 @media (max-width: 95px) {
     .app-button {
         float: right;
@@ -426,7 +425,47 @@ body {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+.appa-button {
+    width: 95px;
+    height: 120px;
+    color: white;
+    text-decoration: none;
+    justify-content: flex-start;
+    font-size: 1em;
+    font-weight: 550;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    padding: 0.5rem;
+    border-radius: 15px;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    z-index: 9;
+    float: left;
+    flex-direction: column;
+    text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+@media (max-width: 95px) {
+    .appa-button {
+        float: right;
+    }
+}
 
+.appa-button span {
+    margin-top: auto;
+    display: block;
+    font-weight: 5;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
 
 .set-button {
     width: 50px;
@@ -472,7 +511,36 @@ body {
     border-radius: 10px;
     z-index: -1;
 }
+.the-setta {
+    background-color: black;
+    width: 35vw;
+    height: 80vh;
+    position: fixed;
+    bottom: -25%;
+    left: 15%;
+    transform: translate(-50%, -50%); 
+    border-radius: 10px;
+    z-index: 50000;
+}
+.scrollable-container {
+    width: 300px;
+    height: 200px;  
+    overflow-y: scroll;
+    border: 1px solid #ccc;
+    padding: 10px 
+  }
+
 .apps {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 120vh;
+    align-content: flex-start;
+    gap: 1.5rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+}
+.appsa {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -508,6 +576,9 @@ body {
     background: #1d1c1c;
 }
 .app-button:hover {
+    background: #1d1c1c69;
+}
+.appa-button:hover {
     background: #1d1c1c69;
 }
 .set-button:hover {
@@ -547,6 +618,9 @@ body {
     width: 24px;
 }
 .app-button span {
+    margin-top: auto;
+}
+.appa-button span {
     margin-top: auto;
 }
 .battery-container {
