--- a/public/css/home.css
+++ b/public/css/home.css
@@ -697,3 +697,29 @@ body {
     width: 14vw;
     height: 16vh;
 }
+
+#batteryContainer {
+    width: 50px;
+    height: 100px;
+    border: 3px solid black;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    overflow: hidden;
+}
+#batteryLevel {
+    width: 100%;
+    height: 100%;
+    background-color: #4caf50;
+    transition: height 0.5s, background-color 0.5s;
+}
+.charging {
+    animation: chargingAnimation 4s infinite;
+}
+@keyframes chargingAnimation {
+0% { height: 0%;}
+25% { height: 25%;}
+50% { height: 50%;}
+75% { height: 75%;}
+100% { height: 100%;}
+}
